Fix overlap between h3 and h2 in Landing.tsx

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -217,8 +217,8 @@
 
 .landing-info h2 {
   margin: 0;
-  margin-top: -20px;
-  margin-left: 20px;
+  margin-top: 5px;
+  margin-left: 0px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   font-size: 32px;
